compilateurMinCaml/tests/typechecking/invalid/Not.ml
print_int (if (not 1) then 101 else 203)